# eidreader

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.rst  eidreader.py  eidreader.spec  pyproject.toml  setup.py  setup_info.py  tasks.py
docs/: beid.reg  build.rst  caller.html  changes.rst  conf.py  index.rst  install.rst  usage.rst
docs/.templates/: layout.html  links.html
eidreader/: __init__.py  main.py  setup_info.py
scripts/: eidreader
tests/: __init__.py  eidreader.ini  test_docs.py  test_packages.py
